package kurou.kodriver.feature.otherlist

/**
 * currentAppVersion のこのプラットフォーム向け実装。
 */
actual fun currentAppVersion(): String = GENERATED_APP_VERSION

/**
 * currentAppVersionLabel のこのプラットフォーム向け実装。
 */
actual fun currentAppVersionLabel(): String = "Android版KoDriverバージョン"
